# data.beeldengeluid.nl

./: .eslintrc.cjs  README.md  app.vue  error.vue  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  settings.scss  vercel.json
.forestry/: settings.yml
.forestry/front_matter/templates/: api.yml  archive.yml  blog-post.yml  dataset.yml  topic.yml
.github/: dependabot.yml
.github/workflows/: lint-check.yml  setup-dev-env.yml
assets/scss/layout/: index.scss
components/: ArticleHeader.vue  ArticlePage.vue  ArticleRelations.vue  CardGrid.vue  CardItem.vue  ChipList.vue  LogoMarkLabs.vue  PrevNext.vue  SectionHeading.vue  VegaView.vue
components/dataset/: TabDashboard.vue  TabMetadata.vue  TabOverview.vue
components/visual/: VisualCircles.vue  VisualDatasetInfo.vue  VisualMain.vue  pack.js
config/: icons.js  menu.js  theme.js
content/: datacatalog0001.json
content/en/: about.md  dataset-definition.md
content/nl/: about.md  dataset-definition.md
dashboard_data/: pyproject.toml  refresh_dashboard_data.py
docs/: workarounds.md
i18n/: i18n.config.ts
locales/: en.json  nl.json
pages/: index.vue
pages/apis/: [...slug].vue
pages/archive/: [...slug].vue
pages/blogs/: [...slug].vue
pages/datasets/: [...slug].vue  index.vue
pages/labs/: [...slug].vue
pages/projects/: [...slug].vue
pages/showcases/: [...slug].vue  index.vue
pages/topics/: [...slug].vue
plugins/: matomo.client.ts
public/: matomo-tracking-code.js  site.webmanifest
public/admin/: index.html
util/: color.js  dataset.js  frontmatter.js  url.js
(+72 files in other folders)
